<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_fav"
            android:title="@string/popular" />
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/ic_now_playing"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_upcoming"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_change_lang"
                android:icon="@drawable/ic_lang"
                android:title="@string/change_lang" />
        </menu>
    </item>

</menu>
