<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="5dp">
    <ImageView
        android:layout_width="75dp"
        android:layout_height="110dp"
        android:id="@+id/imgPoster"
        android:layout_marginRight="10dp"
        android:src="@drawable/placeholder"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/Title"
                android:text="@string/Judul" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle"
                android:text="@string/title" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/Title"
                android:text="@string/Tanggal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvReleaseDate"
                android:text="@string/release_date"/>
        </LinearLayout>

        <TextView
            style="@style/Title"
            android:text="@string/Sinopsis" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/overview"
            android:layout_marginRight="5dp"/>


    </LinearLayout>
</LinearLayout>